--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,516 @@
-.App {
-  text-align: center;
+/* Box sizing rules */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+.Navbar{
+  text-decoration: none;
+}
+.routes{
+  list-style: none;
+  text-decoration: none;
+}
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+/* ul[role='list'],
+ol[role='list'] {
+  list-style: none;
+}
+ul{
+  list-style: none;
+  list-style-type: none;
+  text-decoration: none;
+}
+li{
+  list-style: none;
+  list-style-type: none;
+  text-decoration: none;
+} */
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+/* Set core body defaults */
+body {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+  overflow-x: hidden;
 }
 
-.App-link {
-  color: #61dafb;
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+   scroll-behavior: auto;
   }
-  to {
-    transform: rotate(360deg);
+  
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
   }
 }
+/* ================== Scroll bar ============================ */
+
+::-webkit-scrollbar{
+  width: 12px;
+  height: 2px;
+}
+::-webkit-scrollbar-track{
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background: #ffffff;
+  border-radius: 50px;
+}
+
+::-webkit-scrollbar-thumb{
+  background: #031D2B;
+  border-radius: 50px;
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+::-webkit-scrollbar-thumb:window-inactive {
+  background: #164659;
+  }
+
+/*======================= Home- bubble background animation=====================*/
+#background-wrap {
+  bottom: 0;
+left: 0;
+position: fixed;
+right: 0;
+top: 0;
+z-index: -1;
+}
+
+/* KEYFRAMES */
+
+@-webkit-keyframes animateBubble {
+  0% {
+      margin-top: 1000px;
+  }
+  100% {
+      margin-top: -100%;
+  }
+}
+
+@-moz-keyframes animateBubble {
+  0% {
+      margin-top: 1000px;
+  }
+  100% {
+      margin-top: -100%;
+  }
+}
+
+@keyframes animateBubble {
+  0% {
+      margin-top: 1000px;
+  }
+  100% {
+      margin-top: -100%;
+  }
+}
+
+@-webkit-keyframes sideWays { 
+  0% { 
+      margin-left:0px;
+  }
+  100% { 
+      margin-left:50px;
+  }
+}
+
+@-moz-keyframes sideWays { 
+  0% { 
+      margin-left:0px;
+  }
+  100% { 
+      margin-left:50px;
+  }
+}
+
+@keyframes sideWays { 
+  0% { 
+      margin-left:0px;
+  }
+  100% { 
+      margin-left:50px;
+  }
+}
+
+/* ANIMATIONS */
+.x1 {
+  -webkit-animation: animateBubble 25s linear infinite, sideWays 1s ease-in-out infinite alternate;
+-moz-animation: animateBubble 25s linear infinite, sideWays 1s ease-in-out infinite alternate;
+animation: animateBubble 25s linear infinite, sideWays 1s ease-in-out infinite alternate;
+
+left: -5%;
+top: 5%;
+
+-webkit-transform: scale(0.6);
+-moz-transform: scale(0.6);
+transform: scale(0.6);
+}
+
+.x2 {
+  -webkit-animation: animateBubble 20s linear infinite, sideWays 2s ease-in-out infinite alternate;
+-moz-animation: animateBubble 20s linear infinite, sideWays 2s ease-in-out infinite alternate;
+animation: animateBubble 20s linear infinite, sideWays 2s ease-in-out infinite alternate;
+
+left: 5%;
+top: 80%;
+
+-webkit-transform: scale(0.4);
+-moz-transform: scale(0.4);
+transform: scale(0.4);
+}
+
+.x3 {
+  -webkit-animation: animateBubble 28s linear infinite, sideWays 2s ease-in-out infinite alternate;
+-moz-animation: animateBubble 28s linear infinite, sideWays 2s ease-in-out infinite alternate;
+animation: animateBubble 28s linear infinite, sideWays 2s ease-in-out infinite alternate;
+
+left: 10%;
+top: 40%;
+
+-webkit-transform: scale(0.7);
+-moz-transform: scale(0.7);
+transform: scale(0.7);
+}
+
+.x4 {
+  -webkit-animation: animateBubble 22s linear infinite, sideWays 2s ease-in-out infinite alternate;
+-moz-animation: animateBubble 22s linear infinite, sideWays 2s ease-in-out infinite alternate;
+animation: animateBubble 22s linear infinite, sideWays 2s ease-in-out infinite alternate;
+
+left: 20%;
+top: 0;
+
+-webkit-transform: scale(0.3);
+-moz-transform: scale(0.3);
+transform: scale(0.3);
+}
+
+.x5 {
+  -webkit-animation: animateBubble 29s linear infinite, sideWays 2s ease-in-out infinite alternate;
+-moz-animation: animateBubble 29s linear infinite, sideWays 2s ease-in-out infinite alternate;
+animation: animateBubble 29s linear infinite, sideWays 2s ease-in-out infinite alternate;
+
+left: 30%;
+top: 50%;
+
+-webkit-transform: scale(0.5);
+-moz-transform: scale(0.5);
+transform: scale(0.5);
+}
+
+.x6 {
+  -webkit-animation: animateBubble 21s linear infinite, sideWays 2s ease-in-out infinite alternate;
+-moz-animation: animateBubble 21s linear infinite, sideWays 2s ease-in-out infinite alternate;
+animation: animateBubble 21s linear infinite, sideWays 2s ease-in-out infinite alternate;
+
+left: 50%;
+top: 0;
+
+-webkit-transform: scale(0.8);
+-moz-transform: scale(0.8);
+transform: scale(0.8);
+}
+
+.x7 {
+  -webkit-animation: animateBubble 20s linear infinite, sideWays 2s ease-in-out infinite alternate;
+-moz-animation: animateBubble 20s linear infinite, sideWays 2s ease-in-out infinite alternate;
+animation: animateBubble 20s linear infinite, sideWays 2s ease-in-out infinite alternate;
+
+left: 65%;
+top: 70%;
+
+-webkit-transform: scale(0.4);
+-moz-transform: scale(0.4);
+transform: scale(0.4);
+}
+
+.x8 {
+  -webkit-animation: animateBubble 22s linear infinite, sideWays 1.5s ease-in-out infinite alternate;
+-moz-animation: animateBubble 22s linear infinite, sideWays 1.5s ease-in-out infinite alternate;
+animation: animateBubble 22s linear infinite, sideWays 1.5s ease-in-out infinite alternate;
+
+left: 60%;
+top: 10%;
+
+-webkit-transform: scale(0.3);
+-moz-transform: scale(0.3);
+transform: scale(0.3);
+}
+
+.x13 {
+  -webkit-animation: animateBubble 22s linear infinite, sideWays 2s ease-in-out infinite alternate;
+-moz-animation: animateBubble 22s linear infinite, sideWays 2s ease-in-out infinite alternate;
+animation: animateBubble 22s linear infinite, sideWays 2s ease-in-out infinite alternate;
+
+left: 80%;
+top: 10%;
+
+-webkit-transform: scale(0.4);
+-moz-transform: scale(0.4);
+transform: scale(0.4);
+}
+
+
+
+.x9 {
+  -webkit-animation: animateBubble 29s linear infinite, sideWays 2s ease-in-out infinite alternate;
+	-moz-animation: animateBubble 29s linear infinite, sideWays 2s ease-in-out infinite alternate;
+	animation: animateBubble 29s linear infinite, sideWays 2s ease-in-out infinite alternate;
+	
+	left: 90%;
+	top: 50%;
+	
+	-webkit-transform: scale(0.6);
+	-moz-transform: scale(0.6);
+	transform: scale(0.6);
+}
+
+.x10 {
+  -webkit-animation: animateBubble 26s linear infinite, sideWays 2s ease-in-out infinite alternate;
+-moz-animation: animateBubble 26s linear infinite, sideWays 2s ease-in-out infinite alternate;
+animation: animateBubble 26s linear infinite, sideWays 2s ease-in-out infinite alternate;
+
+left: 80%;
+top: 50%;
+
+-webkit-transform: scale(0.3);
+-moz-transform: scale(0.3);
+transform: scale(0.3);
+}
+
+.x12 {
+  -webkit-animation: animateBubble 26s linear infinite, sideWays 2s ease-in-out infinite alternate;
+-moz-animation: animateBubble 26s linear infinite, sideWays 2s ease-in-out infinite alternate;
+animation: animateBubble 26s linear infinite, sideWays 2s ease-in-out infinite alternate;
+left: 75%;
+top: 10%;
+-webkit-transform: scale(0.8);
+-moz-transform: scale(0.8);
+transform: scale(0.8);
+}
+
+
+.x11 {
+  -webkit-animation: animateBubble 29s linear infinite, sideWays 2s ease-in-out infinite alternate;
+-moz-animation: animateBubble 29s linear infinite, sideWays 2s ease-in-out infinite alternate;
+animation: animateBubble 29s linear infinite, sideWays 2s ease-in-out infinite alternate;
+left: 30%;
+top: 70%;
+-webkit-transform: scale(0.5);
+-moz-transform: scale(0.5);
+transform: scale(0.5);
+}
+
+.x14 {
+  -webkit-animation: animateBubble 20s linear infinite, sideWays 2s ease-in-out infinite alternate;
+-moz-animation: animateBubble 20s linear infinite, sideWays 2s ease-in-out infinite alternate;
+animation: animateBubble 20s linear infinite, sideWays 2s ease-in-out infinite alternate;
+left: 40%;
+top: 50%;
+-webkit-transform: scale(0.8);
+-moz-transform: scale(0.8);
+transform: scale(0.8);
+}
+.x15 {
+  -webkit-animation: animateBubble 40s linear infinite, sideWays 4s ease-in-out infinite alternate;
+-moz-animation: animateBubble 40s linear infinite, sideWays 4s ease-in-out infinite alternate;
+animation: animateBubble 40s linear infinite, sideWays 4s ease-in-out infinite alternate;
+left: 50%;
+top: 50%;
+-webkit-transform: scale(0.8);
+-moz-transform: scale(0.8);
+transform: scale(0.8);
+}
+
+.x16 {
+  -webkit-animation: animateBubble 40s linear infinite, sideWays 4s ease-in-out infinite alternate;
+-moz-animation: animateBubble 40s linear infinite, sideWays 4s ease-in-out infinite alternate;
+animation: animateBubble 40s linear infinite, sideWays 4s ease-in-out infinite alternate;
+left: 17%;
+top: 70%;
+-webkit-transform: scale(0.8);
+-moz-transform: scale(0.8);
+transform: scale(0.8);
+}
+.x17 {
+  -webkit-animation: animateBubble 40s linear infinite, sideWays 4s ease-in-out infinite alternate;
+-moz-animation: animateBubble 40s linear infinite, sideWays 4s ease-in-out infinite alternate;
+animation: animateBubble 40s linear infinite, sideWays 4s ease-in-out infinite alternate;
+left: 80%;
+top: 50%;
+-webkit-transform: scale(0.8);
+-moz-transform: scale(0.8);
+transform: scale(0.8);
+}
+.x18 {
+  -webkit-animation: animateBubble 40s linear infinite, sideWays 4s ease-in-out infinite alternate;
+-moz-animation: animateBubble 40s linear infinite, sideWays 4s ease-in-out infinite alternate;
+animation: animateBubble 40s linear infinite, sideWays 4s ease-in-out infinite alternate;
+left: 60%;
+top: 35%;
+-webkit-transform: scale(0.8);
+-moz-transform: scale(0.8);
+transform: scale(0.8);
+}
+.x19 {
+  -webkit-animation: animateBubble 40s linear infinite, sideWays 4s ease-in-out infinite alternate;
+-moz-animation: animateBubble 40s linear infinite, sideWays 4s ease-in-out infinite alternate;
+animation: animateBubble 40s linear infinite, sideWays 4s ease-in-out infinite alternate;
+left: 34%;
+top: 78%;
+-webkit-transform: scale(0.4);
+-moz-transform: scale(0.4);
+transform: scale(0.4);
+}
+.x20 {
+  -webkit-animation: animateBubble 40s linear infinite, sideWays 4s ease-in-out infinite alternate;
+-moz-animation: animateBubble 40s linear infinite, sideWays 4s ease-in-out infinite alternate;
+animation: animateBubble 40s linear infinite, sideWays 4s ease-in-out infinite alternate;
+left: 30%;
+top: 45%;
+-webkit-transform: scale(0.5);
+-moz-transform: scale(0.5);
+transform: scale(0.5);
+}
+.x21 {
+  -webkit-animation: animateBubble 12s linear infinite, sideWays 1s ease-in-out infinite alternate;
+-moz-animation: animateBubble 12s linear infinite, sideWays 1s ease-in-out infinite alternate;
+animation: animateBubble 12s linear infinite, sideWays 1s ease-in-out infinite alternate;
+
+left: -5%;
+top: 5%;
+
+-webkit-transform: scale(0.15);
+-moz-transform: scale(0.15);
+transform: scale(0.15);
+}
+.x22 {
+  -webkit-animation: animateBubble 12s linear infinite, sideWays 1s ease-in-out infinite alternate;
+-moz-animation: animateBubble 12s linear infinite, sideWays 1s ease-in-out infinite alternate;
+animation: animateBubble 12s linear infinite, sideWays 1s ease-in-out infinite alternate;
+
+left: 20%;
+top: 15%;
+
+-webkit-transform: scale(0.5);
+-moz-transform: scale(0.5);
+transform: scale(0.5);
+}
+.x23 {
+  -webkit-animation: animateBubble 12s linear infinite, sideWays 3s ease-in-out infinite alternate;
+-moz-animation: animateBubble 12s linear infinite, sideWays 3s ease-in-out infinite alternate;
+animation: animateBubble 12s linear infinite, sideWays 3s ease-in-out infinite alternate;
+
+left: 55%;
+top: 75%;
+
+-webkit-transform: scale(0.5);
+-moz-transform: scale(0.5);
+transform: scale(0.5);
+}
+.x24 {
+  -webkit-animation: animateBubble 12s linear infinite, sideWays 3s ease-in-out infinite alternate;
+-moz-animation: animateBubble 12s linear infinite, sideWays 3s ease-in-out infinite alternate;
+animation: animateBubble 12s linear infinite, sideWays 3s ease-in-out infinite alternate;
+
+left: 29%;
+top: 85%;
+
+-webkit-transform: scale(0.5);
+-moz-transform: scale(0.5);
+transform: scale(0.5);
+}
+.x25 {
+  -webkit-animation: animateBubble 12s linear infinite, sideWays 3s ease-in-out infinite alternate;
+-moz-animation: animateBubble 12s linear infinite, sideWays 3s ease-in-out infinite alternate;
+animation: animateBubble 12s linear infinite, sideWays 3s ease-in-out infinite alternate;
+
+left: 19%;
+top: 85%;
+
+-webkit-transform: scale(0.5);
+-moz-transform: scale(0.5);
+transform: scale(0.5);
+}
+
+/* OBJECTS */
+.bubble {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+  -moz-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+  height: 200px;
+  position: absolute;
+  width: 200px;
+}
+
+
+.bubble:after {
+  background: -moz-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.5) 0%, rgba(255,255,255,0) 70%); 
+  background: -webkit-gradien(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,0.5)), color-stop(70%,rgba(255,255,255,0))); 
+  background: -webkit-radial-gradient(center, ellipse cover, #164659 0%,rgba(255,255,255,0) 70%); 
+  background: -o-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 70%);
+  background: -ms-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 70%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80ffffff', endColorstr='#00ffffff',GradientType=1 ); 
+-webkit-border-radius: 50%;
+-moz-border-radius: 50%;
+ border-radius: 50%;
+
+-webkit-box-shadow: inset 0 20px 30px rgba(255, 255, 255, 0.8);
+-moz-box-shadow: inset 0 20px 30px rgba(255, 255, 255, 0.8);
+ box-shadow: inset 0 20px 30px rgba(255, 255, 255, 0.8);
+
+content: "";
+height: 180px;
+left: 10px;
+position: absolute;
+width: 180px;
+} 
+/* ================================================================================================================ */
