--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ blockquote,
 dl,
 dd {
   margin: 0;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .Navbar{
   text-decoration: none;
